--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,19 @@
   }
 }
 
+/* Screen reader only - for SEO content */
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
+
 @layer utilities {
   .section-padding {
     @apply py-20 px-4 sm:px-6 lg:px-8;
